# PitaIA2.0

./: .gitignore  README.md  dev.sh  docker-compose.yml  project-info.md
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_initial.sql
backend/src/: database.rs  lib.rs  main.rs
backend/src/auth/: mod.rs
backend/src/handlers/: auth.rs  posts.rs  users.rs
backend/src/middleware/: auth.rs
backend/src/models/: chat.rs  mod.rs  post.rs  user.rs
backend/src/repository/: mod.rs  posts.rs  users.rs
docker/postgres/: init.sql
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  PostCard.tsx
frontend/src/components/auth/: Login.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
